# ClovecePOSem

./: .gitignore  CMakeLists.txt  CloveceSEM.sln  Hra.cpp  Hra.h  Hrac.h  MakeFile  main.cpp
CloveceSEM/: CMakeLists.txt  CloveceSEM.vcxproj  CloveceSEM.vcxproj.filters  Figurka.cpp  Figurka.h  Hra.cpp  Hra.h  Hrac.cpp  Hrac.h  HraciaDoska.cpp  HraciaDoska.h  Main.cpp  Policko.cpp  Policko.h
CloveceSemFix/: Figurka.h  Hra.cpp  Hra.h  HraciaDoska.cpp  Main.cpp  Policko.h
Hra/: Hra.cpp  Hra.h
Objekty/: Figurka.cpp  Figurka.h  Hrac.cpp  Hrac.h  HraciaDoska.cpp  HraciaDoska.h  Kocka.h
socket_server_src/: CMakeLists.txt  main.cpp
socket_server_src/socket_server_src/: CMakeLists.txt  main.c
sockets_client_src/: CMakeLists.txt  main.cpp
sockets_client_src/sockets_client_src/: CMakeLists.txt  main.cpp
